fix: remove --enable-preview flag from maven and adapt code accordingly